--- a/Python first steps, day 2 -- 2022-12Dec-05.ipynb
+++ b/Python first steps, day 2 -- 2022-12Dec-05.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "34090c89",
+   "id": "9305f062",
    "metadata": {},
    "source": [
     "# Agenda: Week 3 (Dictionaries and files)\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0119db2",
+   "id": "f9edb7eb",
    "metadata": {},
    "source": [
     "# Data structures so far\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0053ea6",
+   "id": "8244c79b",
    "metadata": {},
    "source": [
     "# Getting help in Jupyter\n",
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b4725030",
+   "id": "f21f5084",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "cbb8e59c",
+   "id": "84f2fa2c",
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9395461c",
+   "id": "9da16d8a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94fd3f11",
+   "id": "95cff8fc",
    "metadata": {},
    "source": [
     "# Dictionaries (aka \"dicts\")\n",
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c41783e",
+   "id": "7aa17807",
    "metadata": {},
    "source": [
     "A dict is also known by many other names in other languages:\n",
@@ -303,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "34d5f3b8",
+   "id": "c7531647",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e6ae5e3a",
+   "id": "082ac615",
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "13f52d39",
+   "id": "c007ef78",
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "3b925ea1",
+   "id": "fe2c7335",
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "1650d163",
+   "id": "1d4822c6",
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "fd2fe1a1",
+   "id": "12550272",
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "583d9367",
+   "id": "2122839e",
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "5b94de79",
+   "id": "170a1d0f",
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "70e6a6ea",
+   "id": "ae393b5d",
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f748b4f",
+   "id": "551e5dc2",
    "metadata": {},
    "source": [
     "# First paradigm for dict use: A read-only database\n",
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "351becde",
+   "id": "07eac886",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "3d1b5463",
+   "id": "6f3032f6",
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "58b7ee35",
+   "id": "0e4357d8",
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf168aba",
+   "id": "97ecc979",
    "metadata": {},
    "source": [
     "# Exercise: Restuarant\n",
@@ -583,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "abe17677",
+   "id": "2dec4ea8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "29987a19",
+   "id": "b9bceb68",
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "b10cd421",
+   "id": "d83df3f9",
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "d42ec8e6",
+   "id": "6e81825f",
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "39b7d6fc",
+   "id": "69b3bdf7",
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "16217e6b",
+   "id": "195bae4e",
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "95b247ad",
+   "id": "ef5cc657",
    "metadata": {},
    "outputs": [
     {
@@ -752,14 +752,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1cbc52c6",
+   "id": "d05df109",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "251e51dd",
+   "id": "2a82bbf3",
    "metadata": {},
    "source": [
     "\n",
@@ -784,7 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "94f229bc",
+   "id": "7a549c99",
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +812,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "612ad15e",
+   "id": "dc37f5ed",
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "bedecb9a",
+   "id": "a23abba4",
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +862,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "fb2b5459",
+   "id": "29461f4a",
    "metadata": {},
    "outputs": [
     {
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d42dab04",
+   "id": "0d0475e7",
    "metadata": {},
    "source": [
     "# Dicts are always key -> value\n",
@@ -897,7 +897,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "d8f4dab4",
+   "id": "04e36a03",
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +917,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cff49e13",
+   "id": "5880cef5",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a499dda",
+   "id": "8cdfe3ad",
    "metadata": {},
    "source": [
     "# Dicts for accumulation (paradigm 2)\n",
@@ -941,7 +941,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "bdcec18e",
+   "id": "0c0fd8e5",
    "metadata": {},
    "outputs": [
     {
@@ -971,7 +971,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b34af8ab",
+   "id": "d72447e4",
    "metadata": {},
    "source": [
     "# Exercise: Vowels, digits, and others (dict edition)\n",
@@ -988,7 +988,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "a1609174",
+   "id": "680da2d9",
    "metadata": {},
    "outputs": [
     {
@@ -1022,7 +1022,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "52d2e711",
+   "id": "30bea8dc",
    "metadata": {},
    "outputs": [
     {
@@ -1043,7 +1043,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93990e3c",
+   "id": "d6000151",
    "metadata": {},
    "source": [
     "# Accumulating the unknown (paradigm 3)\n",
@@ -1058,7 +1058,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "100aaed8",
+   "id": "a1521f8f",
    "metadata": {},
    "outputs": [
     {
@@ -1095,7 +1095,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "17618d66",
+   "id": "267c61bc",
    "metadata": {},
    "outputs": [
     {
@@ -1123,7 +1123,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "294cbc40",
+   "id": "29ba7ed9",
    "metadata": {},
    "outputs": [
     {
@@ -1159,7 +1159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "213a4bd9",
+   "id": "6551350c",
    "metadata": {},
    "source": [
     "# Rainfall \n",
@@ -1195,7 +1195,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "e1be0b2d",
+   "id": "0fcdcedb",
    "metadata": {},
    "outputs": [
     {
@@ -1238,7 +1238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e81c274c",
+   "id": "7339fa78",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -1250,7 +1250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "246a9da4",
+   "id": "77933bf4",
    "metadata": {},
    "source": [
     "# Looping over dicts\n",
@@ -1267,7 +1267,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "b479befc",
+   "id": "f696f774",
    "metadata": {},
    "outputs": [
     {
@@ -1290,7 +1290,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "09bf8df6",
+   "id": "ba853c34",
    "metadata": {},
    "outputs": [
     {
@@ -1313,7 +1313,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "7e55466d",
+   "id": "63d770fe",
    "metadata": {},
    "outputs": [
     {
@@ -1336,7 +1336,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "780f9ced",
+   "id": "7b7f9845",
    "metadata": {},
    "outputs": [
     {
@@ -1360,7 +1360,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "4a0d3694",
+   "id": "9e12c2aa",
    "metadata": {},
    "outputs": [
     {
@@ -1383,7 +1383,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "6d2e2101",
+   "id": "ef08b7a0",
    "metadata": {},
    "outputs": [
     {
@@ -1406,7 +1406,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "d9b4f763",
+   "id": "04a430da",
    "metadata": {},
    "outputs": [
     {
@@ -1427,7 +1427,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "43875c78",
+   "id": "1120ecce",
    "metadata": {},
    "outputs": [
     {
@@ -1450,7 +1450,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "dc3dfed3",
+   "id": "59dd1b0b",
    "metadata": {},
    "outputs": [
     {
@@ -1473,7 +1473,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "7a16165d",
+   "id": "1e9cae21",
    "metadata": {},
    "outputs": [
     {
@@ -1495,7 +1495,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "2767eec7",
+   "id": "d40f270a",
    "metadata": {},
    "outputs": [
     {
@@ -1516,7 +1516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ccc177f7",
+   "id": "d2fcb5da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1528,7 +1528,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "963fe209",
+   "id": "f5e262d4",
    "metadata": {},
    "source": [
     "# Exercise: Age statistics\n",
@@ -1540,7 +1540,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "336df106",
+   "id": "156339b5",
    "metadata": {},
    "outputs": [
     {
@@ -1571,7 +1571,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "24917986",
+   "id": "5394c178",
    "metadata": {},
    "outputs": [
     {
@@ -1598,7 +1598,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "31c07035",
+   "id": "a71b551c",
    "metadata": {},
    "outputs": [
     {
@@ -1620,7 +1620,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47c2d9d2",
+   "id": "d5335e52",
    "metadata": {},
    "source": [
     "# How do dictionaries work?\n",
@@ -1649,7 +1649,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ade6c4a8",
+   "id": "dc1292d8",
    "metadata": {},
    "source": [
     "# Files\n",
@@ -1664,7 +1664,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "9d83661f",
+   "id": "f72c885f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1677,7 +1677,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "040f8763",
+   "id": "1e19f586",
    "metadata": {},
    "outputs": [
     {
@@ -2111,7 +2111,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "871c0951",
+   "id": "74d92443",
    "metadata": {},
    "outputs": [
     {
@@ -2542,7 +2542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "419f21df",
+   "id": "8e17f5c2",
    "metadata": {},
    "source": [
     "# Exercise: Word count\n",
@@ -2561,7 +2561,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "49452cfb",
+   "id": "dc71f7d2",
    "metadata": {},
    "outputs": [
     {
@@ -2589,7 +2589,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "343ca723",
+   "id": "983801fa",
    "metadata": {
     "scrolled": true
    },
@@ -2628,7 +2628,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "860c792f",
+   "id": "07f17665",
    "metadata": {},
    "outputs": [
     {
@@ -2665,7 +2665,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e4b7dad",
+   "id": "4f55dafd",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -2678,7 +2678,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "9d9b3979",
+   "id": "7ea564da",
    "metadata": {},
    "outputs": [
     {
@@ -2761,7 +2761,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "418761d9",
+   "id": "bf3b25e6",
    "metadata": {},
    "source": [
     "# Exercise: Summing numbers\n",
@@ -2777,13 +2777,106 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 78,
+   "id": "63a04926",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'abcd'"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = '     abcd      '\n",
+    "\n",
+    "s.strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "c342b6a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'     ABCD      '"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.upper()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "dd7161a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ABCD'"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.strip().upper()   # method chaining -- we're only running one method on each string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "a40bcd53",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: '\\n'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [82], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m total \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m one_line \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnums.txt\u001b[39m\u001b[38;5;124m'\u001b[39m):\n\u001b[0;32m----> 4\u001b[0m     total \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mone_line\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(total)    \n",
+      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: '\\n'"
+     ]
+    }
+   ],
+   "source": [
+    "total = 0\n",
+    "\n",
+    "for one_line in open('nums.txt'):\n",
+    "    s = one_line.strip()   # remove leading/trailing whitespace from one_line\n",
+    "    \n",
+    "    if s.isdigit():\n",
+    "        total += int(one_line)\n",
+    "    \n",
+    "print(total)    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "d6eedd2a",
+   "id": "52338230",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "s = '     abcd      '"
-   ]
+   "source": []
   }
  ],
  "metadata": {
